Incorporated SableCC into project. Added support for Map Phase processing for Profile Data statement.